--- a/Project 2 - Typing Speed Test Game/css/style.css
+++ b/Project 2 - Typing Speed Test Game/css/style.css
@@ -122,3 +122,7 @@ body{
     border: 1px solid orangered;
     /* background-color: white; */
 }
+
+.highlight {
+    background-color: yellow;
+  }
