--- a/Project 3 - Navigation Bar using Sass/css/main.css
+++ b/Project 3 - Navigation Bar using Sass/css/main.css
@@ -22,7 +22,7 @@ body {
 }
 
 .container {
-  max-width: 1480px;
+  max-width: 1400px;
   width: 90%;
   margin: 0 auto;
 }
@@ -88,12 +88,11 @@ footer .bottom-footer .copyright {
 
 .main-menu, .footer-menu {
   display: flex;
-  margin: 0 1.5rem;
+  overflow: hidden;
 }
 .main-menu li, .footer-menu li {
   list-style-type: none;
   color: #eee;
-  display: flex;
 }
 .main-menu li a, .footer-menu li a {
   color: #B1B1B1;
@@ -119,36 +118,41 @@ footer .bottom-footer .copyright {
   align-items: center;
   justify-content: space-between;
 }
-.nav .nav-icons {
+.nav .nav-icons, .nav .mobile-search-icon {
   display: none;
-  display: 100;
 }
 .nav .logo {
   display: flex;
   overflow: hidden;
   align-items: center;
   justify-content: center;
-  margin: 0 2rem;
 }
 .nav .logo img {
   width: 4rem;
+  height: 4rem;
 }
 .nav .logo span {
   color: #fff;
   font-size: 4rem;
   text-transform: uppercase;
 }
-.nav .mobile-search-icon {
-  display: none;
+.nav .right-nav {
+  display: flex;
+  overflow: hidden;
+  align-items: center;
+  justify-content: center;
 }
-.nav .search {
+.nav .right-nav .nav-search {
   display: flex;
   position: relative;
   flex: 1;
-  max-width: 30rem;
-  min-width: 10rem;
+  max-width: 50rem;
+  min-width: 20rem;
 }
-.nav .search input[type=text] {
+.nav .right-nav .nav-search .input-search {
+  display: flex;
+}
+.nav .right-nav .nav-search .input-search input[type=text] {
   height: 4rem;
   display: block;
   max-width: 30rem;
@@ -162,7 +166,7 @@ footer .bottom-footer .copyright {
   border-right: 0;
   border-radius: 30px 0 0 30px;
 }
-.nav .search .search-icon {
+.nav .right-nav .nav-search .input-search .search-icon {
   background-color: #fff;
   height: 4rem;
   display: block;
@@ -175,101 +179,22 @@ footer .bottom-footer .copyright {
   display: flex;
   cursor: pointer;
 }
-.nav .search .search-icon:hover {
+.nav .right-nav .nav-search .input-search .search-icon:hover {
   color: #FF5E34;
   transform: translate(-2px, -3px);
 }
-.nav .auth {
+.nav .right-nav .auth {
   margin-left: 2rem;
   display: flex;
 }
 
 @media screen and (max-width: 1200px) {
+  .container {
+    width: 100%;
+    padding: 0 1rem;
+  }
   .nav .logo {
     margin: 0;
-  }
-}
-@media screen and (max-width: 1000px) {
-  .container {
-    width: 95%;
-  }
-  .nav-icons {
-    color: #fff;
-  }
-}
-@media screen and (max-width: 900px) {
-  .nav {
-    position: relative;
-    transition: 0.5s;
-    overflow: visible;
-    display: flex;
-  }
-  .nav .nav-icons {
-    display: block;
-    margin-right: 1rem;
-  }
-  .nav .nav-right-icons {
-    display: flex;
-  }
-  .nav .nav-right-icons .mobile-search-icon,
-  .nav .nav-right-icons .mobileSignInBtn {
-    display: block;
-    cursor: pointer;
-    color: #fff;
-    margin: 0 1rem;
-  }
-  .nav .nav-right-icons .mobile-search-icon:hover,
-  .nav .nav-right-icons .mobileSignInBtn:hover {
-    transform: translateY(-2px);
-  }
-  .nav .cross {
-    z-index: 99;
-    font-size: 2rem;
-  }
-  .nav .mobile-menu {
-    display: block;
-    background-color: #272727;
-    width: 110vw;
-    height: 100vh;
-    position: absolute;
-    top: 0;
-    z-index: 9;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    transform: translateX(-5rem);
-  }
-  .nav .mobile-menu li {
-    margin: 1rem 0;
-    font-size: 2rem;
-  }
-  .nav .auth {
-    display: none;
-  }
-  .nav .search {
-    display: none;
-  }
-  .main-menu {
-    display: none;
-  }
-  .main-menu li::after {
-    content: "";
-  }
-  .footer-menu {
-    flex-wrap: wrap;
-  }
-  .footer-menu li::after {
-    content: "   ";
-  }
-  footer .bottom-footer {
-    padding: 2rem 1rem;
-  }
-  footer .bottom-footer .copyright {
-    display: block;
-  }
-  footer .bottom-footer .copyright .footer-menu {
-    flex-wrap: wrap;
   }
   .float-search {
     display: flex;
@@ -315,6 +240,89 @@ footer .bottom-footer .copyright {
   .float-search .input-search .search-icon:hover {
     color: #FF5E34;
     transform: translate(-2px, -3px);
+  }
+}
+@media screen and (max-width: 992px) {
+  .container {
+    width: 95%;
+  }
+  .nav-icons {
+    color: #fff;
+  }
+  .nav .right-nav .nav-search {
+    display: none;
+  }
+  .nav .right-nav .nav-right-icons {
+    display: flex;
+  }
+  .nav .right-nav .nav-right-icons .mobile-search-icon,
+  .nav .right-nav .nav-right-icons .mobileSignInBtn {
+    display: block;
+    cursor: pointer;
+    color: #fff;
+    margin: 0 1rem;
+  }
+  .nav .right-nav .nav-right-icons .mobile-search-icon:hover,
+  .nav .right-nav .nav-right-icons .mobileSignInBtn:hover {
+    transform: translateY(-2px);
+  }
+  .nav .right-nav .nav-right-icons .auth {
+    display: none;
+  }
+}
+@media screen and (max-width: 768px) {
+  .nav {
+    position: relative;
+    transition: 0.5s;
+    overflow: visible;
+    display: flex;
+  }
+  .nav .nav-icons {
+    display: block;
+    margin-right: 1rem;
+  }
+  .nav .cross {
+    z-index: 99;
+    font-size: 2rem;
+  }
+  .nav .mobile-menu {
+    display: block;
+    background-color: #272727;
+    width: 110vw;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    z-index: 9;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transform: translateX(-5rem);
+  }
+  .nav .mobile-menu li {
+    margin: 1rem 0;
+    font-size: 2rem;
+  }
+  .main-menu {
+    display: none;
+  }
+  .main-menu li::after {
+    content: "";
+  }
+  .footer-menu {
+    flex-wrap: wrap;
+  }
+  .footer-menu li::after {
+    content: "   ";
+  }
+  footer .bottom-footer {
+    padding: 2rem 1rem;
+  }
+  footer .bottom-footer .copyright {
+    display: block;
+  }
+  footer .bottom-footer .copyright .footer-menu {
+    flex-wrap: wrap;
   }
 }
 @media screen and (max-width: 380px) {
