--- a/Project 3 - Navigation Bar using Sass/sass/main.scss
+++ b/Project 3 - Navigation Bar using Sass/sass/main.scss
@@ -4,6 +4,8 @@ $color-nav: #272727;
 $color-main-menu: #B1B1B1;
 $color-white: #fff;
 $color-primary: #FF5E34;
+$bg-color-search-bar: #B9B9B9;
+// $bg-color-search-bar: #f6f6f6;
 $font-family: "Poppins", sans-serif;
 
 
@@ -35,7 +37,6 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-
 }
 
 // .wrapper {
@@ -166,7 +167,7 @@ footer{
         @include flex(center, center);
         // min-width: 30%;
         img {
-            width: 4rem;
+            // width: 4rem;
             height: 4rem;
         }
         span {
@@ -189,7 +190,7 @@ footer{
             .input-search{
                 display: flex;
                 input[type="text"] {
-                    height: 4rem;
+                    height: 3rem;
                     display: block;
                     max-width: 30rem;
                     font-size: 1.6rem;
@@ -201,12 +202,12 @@ footer{
                     border: 1px solid #777;
                     border-right: 0;
                     border-radius: 30px 0 0 30px;
+                    background-color: $bg-color-search-bar;
                 }
-        
+                
                 .search-icon {
-                    // color: $color-white;
-                    background-color: $color-white;
-                    height: 4rem;
+                    background-color: $bg-color-search-bar;
+                    height: 3rem;
                     display: block;
                     // max-width: 30rem;
                     font-size: 2rem;
@@ -225,7 +226,7 @@ footer{
                     &:hover {
                         color: $color-primary;
                         // text-decoration: underline;
-                        transform: translate(-2px, -3px);
+                        // transform: translate(-2px, -3px);
                     }
                 }
             }
@@ -254,36 +255,44 @@ footer{
     .float-search {
         display: flex;
         position: relative;
-        flex: 1;
-        // background-color: red;
-        width: 100%;
-        background-color: $color-nav;
+        // flex: 1;
+        // width: 90vw;
+        // background-color: orange;
+        // background-color: $color-nav;
+        // margin: 0 auto;
+        // padding: 0 8rem 0 4rem;
 
+        
+        
         .input-search {
-            position: absolute;
-            right: 0;
-            max-width: 100%;
-            min-width: 30%;
-            margin: 0 3rem;
+            // background-color: red;
+            // background-color: transparent;
+            // position: absolute;
+            // right: 0;
+            // max-width: 100%;
+            // min-width: 30%;
+            width: 100%;
+            // margin: 0 3rem;
             display: flex;
 
             input[type="text"] {
+                background-color: transparent;
+                color: $color-main-menu;
                 height: 4rem;
                 display: block;
-                width: 90%;
-                font-size: 1.6rem;
-                font-weight: 300;
-                padding: 1rem;
-                padding-left: 3rem;
+                width: 100%;
+                font-size: 2rem;
+                letter-spacing: 1px;
+                padding-left: 1rem;
                 margin: 1rem auto;
-                // width: 100%;
-                border: 1px solid #777;
+                border: 0;
                 border-right: 0;
-                border-radius: 30px 0 0 30px;
+                border-bottom: 1px solid $color-white;
             }
 
             .search-icon {
                 // color: $color-white;
+                // z-index: 99;
                 background-color: $color-white;
                 height: 4rem;
                 display: block;
@@ -294,17 +303,21 @@ footer{
                 // padding-left: 3rem;
                 // margin: 1rem auto;
                 // width: 100%;
-                border: 1px solid #777;
+                border: 1px solid $color-white;
                 // border-left: 0;
                 border-radius: 0 30px 30px 0;
+                border-radius: 50px;
+                transform: translateX(-25px);
                 align-self: center;
                 display: flex;
                 cursor: pointer;
 
                 &:hover {
-                    color: $color-primary;
+                    color: $color-white;
+                    background-color: $color-primary;
+                    border: 1px solid $color-primary;
                     // text-decoration: underline;
-                    transform: translate(-2px, -3px);
+                    // transform: translate(-2px, -3px);
                 }
             }
         }
@@ -328,15 +341,17 @@ footer{
                 display: flex;
                 .mobile-search-icon,
                 .mobileSignInBtn {
+                    
                     display: block;
                     cursor: pointer;
                     color: $color-white;
                     margin: 0 1rem;
                 }
-                .mobile-search-icon:hover,
-                .mobileSignInBtn:hover {
-                    transform: translateY(-2px);
-                }
+                // .mobile-search-icon:hover,
+                // .mobileSignInBtn:hover {
+                //     transform: translateY(-2px);
+                //     color: $color-primary;
+                // }
                 .auth {
                     display: none;
                 }    
@@ -424,35 +439,40 @@ footer{
     .nav-icons {
         color: $color-white;
     }
-    body {
-        font-family: $font-family;
-        background: #eee;
-        font-size: 1.5rem;
-        display: flex;
-        flex-direction: column;
-        min-height: 100vh;
-    
+    .nav {
+        height: 5rem;
+        .logo {
+            img {
+                height: 2rem;
+            }
+            span {
+                font-size: 2rem;
+            }
+        }
+        .nav-right-icons {
+            .mobile-search-icon,
+            .mobileSignInBtn {
+                font-size: 1.6rem;  
+            }
+        }
     }
-   
 
-   
+    .float-search {
+        display: flex;
+        position: relative;
+        .input-search {
+            width: 100%;
+            display: flex;
+            input[type="text"] {
+                height: 3rem;
+            }
+            .search-icon {
+                height: 3rem;
+                width: 3rem;
+                font-size: 1.6rem;
+                transform: translateX(-15px);
+            }
+        }
 
-        
-
-    // .nav {
-    //     .logo {
-    //         img {
-    //             width: 2rem;
-    //         }
-    //         span {
-    //             font-size: 2rem;
-    //         }
-    //     }
-    //     .nav-right-icons {
-    //         .mobile-search-icon,
-    //         .mobileSignInBtn {
-    //             font-size: 1.4rem;  
-    //         }
-    //     }
-    // }
+    }
 }
