--- a/Project 4 - Guess My Number/css/style.css
+++ b/Project 4 - Guess My Number/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Pixelify+Sans:wght@500;700&display=swap");
+@import url("https://fonts.googleapis.com/cs?family=Inter:wght@400;600;700&family=Pixelify+Sans:wght@500;700&display=swap");
 
 @font-face {
   font-family: GamePause;
