--- a/css/main.css
+++ b/css/main.css
@@ -59,3 +59,34 @@ p {
   text-decoration: none;
   color: #1b1b1b;
 }
+
+.global-btn{
+  padding: 1rem 1.5rem;
+  background-color: #fff;
+  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.2);
+  border: 0;
+  border-radius: 50px;
+  outline: none;
+  text-transform: uppercase;
+  cursor: pointer;
+  color: #111111;
+  width: fit-content;
+  transition: transform 0.2s ease-in-out;
+  font-family: Inter, Arial, Helvetica, sans-serif;
+   letter-spacing: 0;
+}
+
+.global-btn--back {
+  font-family: Inter, Arial, Helvetica, sans-serif;
+  position: fixed;
+  background: linear-gradient(#e92e3d, #ff6e6a);
+  text-decoration: none;
+  height: 50px;
+  margin: 1rem;
+  top: 0;
+  left: 0;
+  color: #fff;
+  z-index: 999;
+  font-size: 2.5rem;
+  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.2);
+}
