--- a/Project 4 - Guess My Number/css/style.css
+++ b/Project 4 - Guess My Number/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/cs?family=Inter:wght@400;600;700&family=Pixelify+Sans:wght@500;700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Inter:wght@400;600;700&family=Pixelify+Sans:wght@500;700&display=swap");
 
 @font-face {
   font-family: GamePause;
@@ -18,9 +18,7 @@ html {
 body {
   font-family: "Pixelify Sans", cursive;
   background-color: #000;
-  color: #fff;
   font-size: 1.6rem;
-  letter-spacing: 2px;
   width: 100%;
 }
 
@@ -31,6 +29,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   border-bottom: 5px solid #fff;
+  color: #fff;
 }
 
 .navbar {
@@ -44,6 +43,7 @@ body {
 .nav-right p {
   font-size: 2rem;
   word-spacing: 1rem;
+  color: #fff;
 }
 
 .btn {
@@ -83,6 +83,7 @@ main {
   display: flex;
   justify-content: space-between;
   gap: 3rem;
+  color: #fff;
 }
 
 .left {
@@ -126,15 +127,13 @@ input[type="number"].disable {
 
 input[type="number"]:focus {
   border: 2px solid rgb(57, 184, 226);
-  /* border: 0; */
 }
 
-/* Chrome, Safari, Edge, Opera */
-/* input::-webkit-outer-spin-button,
+input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
-} */
+}
 
 @media screen and (max-width: 400px) {
   .navbar {
