--- a/Project 5 - Modal Window/css/style.css
+++ b/Project 5 - Modal Window/css/style.css
@@ -39,6 +39,7 @@ body {
   display: none;
 }
 
+
 .modal {
   position: absolute;
   top: 50%;
@@ -49,7 +50,9 @@ body {
   padding: 6rem;
   border-radius: 5px;
   box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
-  z-index: 10;
+  z-index: 9999;
+  overflow: scroll;
+  max-height: 90vh;
 }
 
 .modal h1 {
@@ -63,6 +66,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999;
 }
 
 .close-modal {
@@ -75,4 +79,11 @@ body {
   margin: 3rem;
   padding: 0;
   cursor: pointer;
+}
+
+@media screen and (max-width: 1080px) {
+  .modal {
+    width: 90%;
+    padding: 2rem;
+  }
 }
