--- a/Project 6 - Pig Game/css/style.css
+++ b/Project 6 - Pig Game/css/style.css
@@ -25,7 +25,7 @@ body {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 main {
@@ -131,7 +131,8 @@ main {
   font-family: Inter, Arial, Helvetica, sans-serif;
 }
 
-.btn:hover {
+.btn:hover,
+.btn:focus {
   transform: translateY(-1px);
   outline: 2px solid #3ed886;
 }
@@ -139,8 +140,6 @@ main {
 .btn-hint {
   outline: 2px solid #3ed886;
 }
-
-
 
 .icon {
   width: 64px;
@@ -158,7 +157,7 @@ main {
     overflow: hidden;
   }
   main {
-    aspect-ratio: auto;
+    aspect-ratio: 2/1;
   }
 
   .current {
