--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,7 @@ h1 {
   text-decoration: rgb(0, 255, 72) underline wavy;
 }
 
-p {
+.text-content {
   margin: 2rem 0;
 }
 
@@ -60,33 +60,91 @@ p {
   color: #1b1b1b;
 }
 
-.global-btn{
-  padding: 1rem 1.5rem;
-  background-color: #fff;
-  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.2);
+.global-btn {
+  background: linear-gradient(#e92e3d, #ff6e6a);
+  border-radius: 30px;
   border: 0;
-  border-radius: 50px;
-  outline: none;
-  text-transform: uppercase;
+  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.5);
+  color: #fff;
   cursor: pointer;
-  color: #111111;
-  width: fit-content;
-  transition: transform 0.2s ease-in-out;
   font-family: Inter, Arial, Helvetica, sans-serif;
-   letter-spacing: 0;
+  font-size: 2.5rem;
+  letter-spacing: 0;
+  padding: 1rem 1.5rem;
+  text-decoration: none;
+  text-transform: uppercase;
+  transition: transform 0.2s ease-in-out;
+}
+
+.global-btn:hover,
+.global-btn:focus {
+  transform: translateY(-1px);
+  outline: 2px solid #3ed886;
+}
+
+.global-btn-about {
+  position: fixed;
+  top: 0;
+  right: 0;
+  margin: 1rem;
 }
 
 .global-btn--back {
-  font-family: Inter, Arial, Helvetica, sans-serif;
   position: fixed;
-  background: linear-gradient(#e92e3d, #ff6e6a);
-  text-decoration: none;
-  height: 50px;
   margin: 1rem;
   top: 0;
   left: 0;
-  color: #fff;
   z-index: 999;
-  font-size: 2.5rem;
-  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.2);
+}
+
+.modal {
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
+  left: 50%;
+  max-height: 90vh;
+  overflow: scroll;
+  padding: 6rem;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 70%;
+  z-index: 9999;
+}
+
+.modal h1 {
+  margin: 2rem 0;
+}
+
+.overlay {
+  background-color: rgba(0, 0, 0, 0.5);
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: 999;
+}
+
+.close-modal {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: 5rem;
+  margin: 3rem;
+  padding: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.hidden {
+  display: none;
+}
+
+@media screen and (max-width: 1080px) {
+  .modal {
+    width: 90%;
+    padding: 2rem;
+  }
 }
