--- a/Project 7 - Bankist/css/style.css
+++ b/Project 7 - Bankist/css/style.css
@@ -7,7 +7,6 @@
 }
 
 :root {
-  --border-radius: 30px;
   --box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   --color-background: #f2f1ff;
   --color-card: #9190f5; /*test*/
@@ -16,7 +15,6 @@
   --color-text-dark: #0f172a;
   --color-text-light: #64748b;
   --color-white: #ffffff;
-  --gap: 2rem;
 }
 
 html {
@@ -26,7 +24,6 @@ html {
 body {
   background-color: var(--color-background);
   font-family: Inter, Arial, Helvetica, sans-serif;
-  font-size: 1.6rem;
 }
 
 .wrapper {
@@ -34,18 +31,23 @@ body {
   margin: 0 auto;
   width: 90vw;
   display: grid;
-  grid-template-columns: 3fr 1fr;
-  /* grid-template-rows: auto repeat(3, 15rem) auto; */
+  grid-template-areas:
+    "header header"
+    "main sidebar"
+    "main sidebar"
+    "main sidebar"
+    "footer footer";
+  grid-template-columns: 4fr 1fr;
   gap: 4rem;
   padding: 3rem 0;
 }
 
 .top-navigation {
+  grid-area: header;
   align-items: center;
   background-color: var(--color-primary);
-  border-radius: var(--border-radius);
+  border-radius: 3rem;
   display: flex;
-  grid-column: 1 / span 2;
   height: 6rem;
   justify-content: space-between;
   overflow: hidden;
@@ -56,6 +58,10 @@ body {
 .left-nav {
   color: var(--color-text-dark);
   font-weight: 500;
+}
+
+.welcome {
+  font-size: 2rem;
 }
 
 .right-nav {
@@ -75,18 +81,49 @@ body {
   height: 100%;
   object-fit: cover;
   box-shadow: var(--box-shadow);
-  border-radius: var(--border-radius);
+  border-radius: 3rem;
   cursor: pointer;
   transition: transform 0.3s ease-in-out;
 }
 
+.switch-users:hover 
+.switch-users-list{
+  background-color: var(--color-white);
+  font-size: 1.6rem;
+  margin-top: 2px;
+  position: absolute;
+  transform: translateX(-80%);
+  z-index: 99;
+}
+
+
+.user__list{
+  align-items: center;
+  border-bottom: 1px solid #ccc;
+  display: flex;
+  gap: 1rem;
+  padding: .5rem 2rem;
+  width: 100%;
+}
+
+.user__list:hover{
+  background-color: #f2f2f2;
+}
+
+.user__list-avatar{
+  width: 20px;
+  height: 20px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
 .btn {
   border: 0;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   font-family: Inter, Arial, Helvetica, sans-serif;
   cursor: pointer;
   transition: transform 0.3s ease-in-out;
-  border-radius: 10px;
+  border-radius: 1rem;
 }
 
 .btn:hover,
@@ -100,39 +137,57 @@ body {
 
 .btn--primary {
   background-color: var(--color-white);
-  padding: 10px 20px;
+  padding: 1rem 2rem;
   box-shadow: var(--box-shadow);
 }
 
 .card {
   background-color: var(--color-primary);
   box-shadow: var(--box-shadow);
-  border-radius: var(--border-radius);
+  border-radius: 3rem;
 }
 
 .main__container {
+  grid-area: main;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 5rem;
+}
+
+.transaction__container {
   height: fit-content;
 }
 
 .transactions__header {
-  padding: 2rem 3rem;
+  padding: 2rem;
   display: flex;
   flex-direction: column;
-  gap: var(--gap);
+  gap: 2rem;
+}
+
+.md__text {
+  font-size: 1.6rem;
+}
+
+.sm__text {
+  font-size: 1.4rem;
 }
 
 .row {
   display: flex;
-  gap: var(--gap);
+  gap: 2rem;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .col {
   display: flex;
   justify-content: space-between;
-  gap: var(--gap);
-  padding: 10px 20px;
-  border-radius: var(--border-radius);
+  align-items: center;
+  gap: 2rem;
+  padding: 1rem 2rem;
+  border-radius: 3rem;
   background-color: var(--color-secondary);
   box-shadow: var(--box-shadow);
 }
@@ -143,22 +198,42 @@ body {
 
 .transactions__body {
   background-color: var(--color-white);
-  border-radius: var(--border-radius);
-  padding: 3rem;
+  border-radius: 3rem;
+  padding: 2rem;
   box-shadow: var(--box-shadow) inset;
-  max-height: 60rem;
+  height: 44rem;
   overflow-y: auto;
 }
+
+.transactions__body::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+.transactions__body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px var(--color-primary); 
+  border-bottom-right-radius: 30px;
+  border-top-right-radius: 30px;
+  margin-bottom: 1.1rem;
+}
+
+/* Handle */
+.transactions__body::-webkit-scrollbar-thumb {
+  background: var(--color-primary);
+  border-radius: 3rem;
+}
+
+
 
 .transaction__lists {
   display: flex;
   flex-direction: column;
-  gap: var(--gap);
+  gap: 2rem;
 }
 
 .transaction__list {
   background-color: var(--color-secondary);
-  border-radius: 10px;
+  border-radius: 2rem;
   padding: 1rem;
   display: flex;
   align-items: center;
@@ -168,7 +243,7 @@ body {
 
 .transaction__user {
   display: flex;
-  gap: var(--gap);
+  gap: 2rem;
   align-items: center;
 }
 
@@ -198,36 +273,37 @@ body {
 }
 
 .sidebar {
+  grid-area: sidebar;
   display: flex;
   flex-direction: column;
   height: 100%;
-  gap: 4rem;
+  gap: 5rem;
 }
 
 .sidebar__card {
-  padding: 2rem 3rem;
+  padding: 2rem;
 }
 
 .card__title {
   margin-bottom: 2rem;
   background-color: var(--color-secondary);
-  border-radius: 50px;
+  border-radius: 3rem;
   box-shadow: var(--box-shadow);
   padding: 1rem;
   text-align: center;
+  font-size: 1.8rem;
 }
 
 .card__body {
   display: flex;
   flex-direction: column;
-  gap: var(--gap);
+  gap: 2rem;
 }
 
 .input__group {
-  width: 100%;
   padding: 1rem;
   font-size: 2rem;
-  border-radius: 10px;
+  border-radius: 1rem;
   border: 0;
   box-shadow: var(--box-shadow) inset;
   text-transform: lowercase;
@@ -243,4 +319,69 @@ input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+
+.select_input{
+  width: 100%;
+  text-transform: capitalize;
+}
+
+.footer__container{
+  grid-area: footer;
+  height: 10rem;
+  border-radius: 3rem;
+  background-color: var(--color-primary);
+}
+
+.hidden{
+  display: none !important;
+}
+
+.login__container{
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.status__message{
+  width: 50rem;
+  margin: 4rem auto 0;
+  color: var(--color-white);
+  background-color: var(--color-card);
+}
+
+.error{
+  background-color: #f87171;
+}
+
+.success{
+  background-color: #38bdf8;
+}
+
+
+@media screen and (max-width: 800px) {
+  html {
+    font-size: 50%;
+  }
+}
+
+@media screen and (max-width: 680px) {
+  .wrapper {
+    grid-template-areas:
+      "header"
+      "sidebar"
+      "main"
+      "footer";
+    grid-template-columns: 1fr;
+  }
+  .input__group {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  html {
+    font-size: 43.75%;
+  }
 }
