--- a/Project 7 - Bankist/css/style.css
+++ b/Project 7 - Bankist/css/style.css
@@ -86,8 +86,7 @@ body {
   transition: transform 0.3s ease-in-out;
 }
 
-.switch-users:hover 
-.switch-users-list{
+.switch-users:hover .switch-users-list {
   background-color: var(--color-white);
   font-size: 1.6rem;
   margin-top: 2px;
@@ -96,21 +95,20 @@ body {
   z-index: 99;
 }
 
-
-.user__list{
+.user__list {
   align-items: center;
   border-bottom: 1px solid #ccc;
   display: flex;
   gap: 1rem;
-  padding: .5rem 2rem;
+  padding: 0.5rem 2rem;
   width: 100%;
 }
 
-.user__list:hover{
+.user__list:hover {
   background-color: #f2f2f2;
 }
 
-.user__list-avatar{
+.user__list-avatar {
   width: 20px;
   height: 20px;
   object-fit: cover;
@@ -211,7 +209,7 @@ body {
 
 /* Track */
 .transactions__body::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px var(--color-primary); 
+  box-shadow: inset 0 0 5px var(--color-primary);
   border-bottom-right-radius: 30px;
   border-top-right-radius: 30px;
   margin-bottom: 1.1rem;
@@ -222,8 +220,6 @@ body {
   background: var(--color-primary);
   border-radius: 3rem;
 }
-
-
 
 .transaction__lists {
   display: flex;
@@ -321,44 +317,47 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
-.select_input{
+.select_input {
   width: 100%;
   text-transform: capitalize;
 }
 
-.footer__container{
+.footer__container {
   grid-area: footer;
-  height: 10rem;
+  min-height: 10rem;
   border-radius: 3rem;
   background-color: var(--color-primary);
+  box-shadow: var(--box-shadow);
 }
 
-.hidden{
+.hidden {
   display: none !important;
 }
 
-.login__container{
+.login__container {
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.status__message{
+.status__message {
   width: 50rem;
   margin: 4rem auto 0;
   color: var(--color-white);
   background-color: var(--color-card);
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
-.error{
+.error {
   background-color: #f87171;
 }
 
-.success{
+.success {
   background-color: #38bdf8;
 }
-
 
 @media screen and (max-width: 800px) {
   html {
