--- a/Project-9-Forkify/src/sass/_base.scss
+++ b/Project-9-Forkify/src/sass/_base.scss
@@ -1,4 +1,3 @@
-// $color-primary: #f59a83;
 $color-primary: #f38e82;
 $color-grad-1: #fbdb89;
 $color-grad-2: #f48982;
@@ -41,9 +40,7 @@ body {
   font-weight: 400;
   line-height: 1.6;
   color: $color-grey-dark-1;
-  background-image: $gradient;
-  background-size: cover;
-  background-repeat: no-repeat;
+  background: $gradient cover no-repeat;
   min-height: calc(100vh - 2 * 4vw);
 }
 
