rename loc.js to distanceCalculator &  improve code readabilty

--- a/Project-15-place-picker/src/components/Places/Places.module.scss
+++ b/Project-15-place-picker/src/components/Places/Places.module.scss
@@ -44,6 +44,7 @@
     border: none;
     padding: 0;
     transition: all 0.2s ease-in-out;
+    cursor: pointer;
   }
 
   &:nth-child(odd) button:hover,
