--- a/Project-15-place-picker/src/components/DeleteConfirmation/DeleteConfirmation.module.scss
+++ b/Project-15-place-picker/src/components/DeleteConfirmation/DeleteConfirmation.module.scss
@@ -1,11 +1,11 @@
+@import "../../assets/styles/common";
+
 .deleteConfirmation {
   padding: 1rem;
 
   h2 {
-    font-family: "Raleway", sans-serif;
+    font-family: $railwayFont;
     font-size: 1.5rem;
-    margin: 0;
-    padding: 0;
     color: #5d0909;
   }
 
@@ -25,7 +25,7 @@
 
   .btn {
     cursor: pointer;
-    font-family: "Raleway", sans-serif;
+    font-family: $railwayFont;
     font-size: 1rem;
     padding: 0.5rem 1.5rem;
     border: none;
@@ -44,7 +44,7 @@
     background: transparent;
     border: none;
     padding: 0;
-    font-family: "Raleway", sans-serif;
+    font-family: $railwayFont;
     font-size: 1rem;
     color: #5d0909;
     cursor: pointer;
