--- a/Project-15-place-picker/src/components/Places/Places.module.scss
+++ b/Project-15-place-picker/src/components/Places/Places.module.scss
@@ -1,3 +1,5 @@
+@import "../../assets/styles/common";
+
 .places-category {
   max-width: 85rem;
   margin: 2rem auto;
@@ -6,7 +8,7 @@
   border-radius: 8px;
 
   h2 {
-    font-family: "Raleway", sans-serif;
+    font-family: $railwayFont;
     font-size: 1.5rem;
     margin: 0;
     padding: 0;
@@ -69,7 +71,7 @@
   }
 
   h3 {
-    font-family: "Raleway", sans-serif;
+    font-family: $railwayFont;
     font-weight: normal;
     font-size: 0.9rem;
     position: absolute;
