--- a/Project-16-Quiz-App/src/components/Header/header.module.scss
+++ b/Project-16-Quiz-App/src/components/Header/header.module.scss
@@ -1,3 +1,5 @@
+@import "../../assets/styles/common";
+
 .header {
   margin: 2rem 0;
   text-align: center;
@@ -9,7 +11,7 @@
   }
 
   h1 {
-    font-family: "Roboto Condensed", sans-serif;
+    font-family: $robotoCondensedFont;
     font-weight: bold;
     font-size: 2.5rem;
     letter-spacing: 0.6rem;
