--- a/Project-16-Quiz-App/src/components/Question/question.module.scss
+++ b/Project-16-Quiz-App/src/components/Question/question.module.scss
@@ -1,3 +1,5 @@
+@import "../../assets/styles/common";
+
 // Question timer
 .question {
   progress {
@@ -29,9 +31,9 @@
       background: #6a558a;
     }
   }
-  
+
   h2 {
-    font-family: "Roboto", sans-serif;
+    font-family: $robotoFont;
     font-size: 1.5rem;
     font-weight: normal;
     margin: 0.5rem 0 2.5rem 0;
