--- a/Project-16-Quiz-App/src/components/Summary/summary.module.scss
+++ b/Project-16-Quiz-App/src/components/Summary/summary.module.scss
@@ -1,3 +1,5 @@
+@import "../../assets/styles/common";
+
 .summary {
   max-width: 40rem;
   margin: 2rem auto;
@@ -22,7 +24,7 @@
   }
 
   h2 {
-    font-family: "Roboto", sans-serif;
+    font-family: $robotoFont;
     font-size: 3rem;
     text-align: center;
     margin: 0;
@@ -42,7 +44,7 @@
   }
 
   h3 {
-    font-family: "Roboto Condensed", sans-serif;
+    font-family: $robotoCondensedFont;
     font-size: 1rem;
     margin: 0 auto;
     display: flex;
@@ -63,7 +65,7 @@
 
   .user-answer {
     margin: 0.25rem 0;
-    font-family: "Roboto Condensed", sans-serif;
+    font-family: $robotoCondensedFont;
     font-weight: bold;
     color: #251e2f;
 
@@ -98,13 +100,13 @@
   }
 
   .number {
-    font-family: "Roboto Condensed", sans-serif;
+    font-family: $robotoCondensedFont;
     font-size: 3rem;
     color: #594276;
   }
 
   .text {
-    font-family: "Roboto Condensed", sans-serif;
+    font-family: $robotoCondensedFont;
     text-transform: uppercase;
     font-size: 0.8rem;
     color: #30273a;
