used custome input component in signup form

--- a/Project-17-React-Form/src/index.css
+++ b/Project-17-React-Form/src/index.css
@@ -4,7 +4,7 @@
 
 body {
   margin: 0;
-  font-family: 'Lato', serif;
+  font-family: "Lato", serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: linear-gradient(#d0d6d9, #b1b4ba);
@@ -27,7 +27,7 @@ header img {
 }
 
 header h1 {
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
   font-weight: 700;
   font-size: 3rem;
   margin: 1rem 0;
@@ -87,16 +87,16 @@ fieldset {
   color: #142020;
 }
 
-.control:has(input[type='checkbox']) {
+.control:has(input[type="checkbox"]) {
   display: flex;
   align-items: center;
 }
 
-.control:has(input[type='checkbox']) label {
+.control:has(input[type="checkbox"]) label {
   margin: 0;
 }
 
-.control input[type='checkbox'] {
+.control input[type="checkbox"] {
   display: inline-block;
   width: auto;
   max-width: none;
@@ -155,4 +155,15 @@ fieldset {
 .button-flat:focus {
   background-color: transparent;
   color: #869999;
+}
+
+.switch {
+  width: fit-content;
+  margin: 0 auto;
+}
+
+.switch:first-child {
+  font-family: "Quicksand", sans-serif;
+  font-weight: 700;
+  color: #2f4444;
 }
