--- a/Project-18-Food-order-app/src/components/Button/button.module.scss
+++ b/Project-18-Food-order-app/src/components/Button/button.module.scss
@@ -1,7 +1,6 @@
 @import "../../assets/scss/common";
 
 @mixin buttonStyles {
-  font: inherit;
   cursor: pointer;
   background-color: $primaryColor;
   border: 1px solid $primaryColor;
@@ -35,4 +34,6 @@
 
 .text-button {
   @include textButtonStyles();
+  font-size: 1.4rem;
+  font-weight: 400;
 }
