--- a/Project-18-Food-order-app/src/components/Header/header.module.scss
+++ b/Project-18-Food-order-app/src/components/Header/header.module.scss
@@ -28,4 +28,11 @@
       text-transform: uppercase;
     }
   }
+
+  .user-action {
+    button {
+      color: $primaryColor;
+      font-size: 1.2rem;
+    }
+  }
 }
