--- a/Project-17-React-Form/src/index.css
+++ b/Project-17-React-Form/src/index.css
@@ -1,9 +1,10 @@
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  margin: 0;
   font-family: "Lato", serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -45,9 +46,15 @@ form {
   box-shadow: 0 0 16px 1px rgba(0, 0, 0, 0.5);
 }
 
+form h2,
+p {
+  margin: 1rem 0;
+}
+
 .control,
 fieldset {
   margin-bottom: 1rem;
+  padding: 5px;
 }
 
 .control.no-margin {
@@ -73,6 +80,10 @@ fieldset {
   border: 1px solid #758a8a;
   background-color: #869999;
   color: #142020;
+}
+
+hr {
+  margin: 0.5rem 0;
 }
 
 .control select {
