--- a/Project-20-Tanstack-query/frontend/src/index.css
+++ b/Project-20-Tanstack-query/frontend/src/index.css
@@ -1,12 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Lato:wght@400;700&display=swap');
-
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  margin: 0;
-  font-family: 'Lato', serif;
+  font-family: "Lato", serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: linear-gradient(#222c31, #111d32);
@@ -16,12 +15,9 @@ body {
 
 ul {
   list-style: none;
-  margin: 0;
-  padding: 0;
 }
 
 #main-header {
-  margin: 0;
   padding: 2rem 15%;
   display: flex;
   justify-content: space-between;
@@ -80,8 +76,9 @@ ul {
 #overview-section p {
   font-size: 1.25rem;
   line-height: 1.5;
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
   text-shadow: 0 2px 2px rgba(0, 0, 0, 0.26);
+  margin-bottom: 2rem;
 }
 
 .content-section {
@@ -91,7 +88,7 @@ ul {
 
 .content-section h2 {
   font-size: 2rem;
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
   margin: 2rem auto;
   color: #b6cad5;
 }
@@ -116,6 +113,7 @@ ul {
   flex-direction: column;
   gap: 1rem;
   width: 20rem;
+  padding-bottom: 2rem;
 }
 
 .event-item img {
@@ -134,7 +132,7 @@ ul {
 
 .event-item h2 {
   font-size: 1.15rem;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   margin: 0;
   color: #d7bfcb;
 }
@@ -142,13 +140,13 @@ ul {
 .event-item .event-item-date {
   margin: 0.5rem;
   font-size: 0.85rem;
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
 }
 
 .event-item .event-item-location {
   margin: 0.5rem;
   font-size: 1rem;
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
 }
 
 #search-form input {
